# oclive-pack-editor

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  start.bat  vite.config.ts
.cargo/: config.toml
.github/: dependabot.yml  oclive-validation-ref  pull_request_template.md
.github/workflows/: ci.yml  release.yml
creator-docs/: ROLE_PACK_EDITOR.md
docs/: I18N_PROGRESS.md  PLAN_TAURI_DESKTOP.md  ROADMAP_EMOTION_ASSETS.md  STANDALONE.md  VSCODE_LITE_EXPORT.md
e2e/: smoke.spec.ts
handoff/: PACK_EDITOR_NEXT_SESSION.md  PACK_EDITOR_ROADMAP.md
scripts/: checkout-oclive-validation.mjs  diff-json-keys.mjs  start.bat  wasm-pack-build.mjs
src/: App.spec.ts  App.vue  defaults.ts  main.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  plugin_rpc.rs
src/components/: AdvFaqList.vue  HelpHint.vue
src/components/pack/: AdvancedCreationPanel.vue  AnchorPresetManager.spec.ts  AnchorPresetManager.vue  ChatFeedbackModal.vue  ChatPanel.spec.ts  ChatPanel.vue  (+31 more)
src/composables/: useDirectoryPlugins.ts  useEditorViewState.test.ts  useEditorViewState.ts  usePackEditor.ts  usePackShellPreferences.ts  useRolesWorkspace.test.ts  useRolesWorkspace.ts
src/i18n/: index.ts
src/lib/: advancedEditorFaq.ts  advancedEditorHints.ts  applyLoadedPackToEditor.test.ts  applyLoadedPackToEditor.ts  authorPack.test.ts  authorPack.ts  blueprintV2.test.ts  blueprintV2.ts  directoryPluginsApi.ts  draftStorage.test.ts  draftStorage.ts  emotionAssets.test.ts  emotionAssets.ts  exportErrorMessages.test.ts  exportErrorMessages.ts  exportFolder.ts  exportPack.parity.test.ts  exportPack.test.ts  exportPack.ts  exportPrepare.test.ts  exportPrepare.ts  exportValidate.test.ts  exportValidate.ts  hostRuntimeVersion.ts  importPack.test.ts  importPack.ts  jsonKeys.ts  knowledgeFiles.ts  knowledgeFrontMatter.test.ts  knowledgeFrontMatter.ts  knowledgeHitPreview.test.ts  knowledgeHitPreview.ts  manifestCreatorDownloader.test.ts  manifestCreatorDownloader.ts  marketComposeImport.test.ts  marketComposeImport.ts  memorySeed.test.ts  memorySeed.ts  mergeManifest.test.ts  mergeManifest.ts  (+39 more)
src/types/: plugin.ts  uiConfig.ts
(+10 files in other folders)
