[package]
name = "oclive-pack-editor-tauri"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "oclive role pack editor — Tauri shell"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
oclive_validation = { path = "../../oclivenewnew/crates/oclive_validation" }
tauri = { version = "1.5", features = [ "dialog-confirm", "protocol-asset", "dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }

[profile.release]
opt-level = "z"
lto = true
