[package]
name = "oclive-pack-editor-tauri"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "oclive role pack editor — Tauri shell"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
oclive_validation = { path = "../../oclivenewnew/kernel/crates/oclive_validation" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
